# Website-Layout-Tool

./: .gitignore  ALL_BUILD.vcxproj  Box.cpp  Box.h  Button.cpp  Button.h  CMakeCache.txt  CMakeLists.txt  CheckMark.cpp  Color.cpp  Color.h  README.md  RadioOption.cpp  RadioOption.h  Text.cpp  Text.h  TextBox.cpp  TextBox.h  Website-Layout-Tool.sln  Website-Layout-Tool.vcxproj  Website-Layout-Tool.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  element.cpp  element.h  gpt4-prompt.txt  main.cpp  utils.cpp  utils.h
examples/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
source/headers/: Box.h  Button.h  Captcha.h  CheckMark.h  Color.h  ImagePlaceholder.h  Layout.h  RadioOption.h  Text.h  TextBox.h  utils.h
source/src/: Box.cpp  Button.cpp  Captcha.cpp  CheckMark.cpp  Color.cpp  ImagePlaceholder.cpp  Layout.cpp  RadioOption.cpp  Text.cpp  TextBox.cpp  main.cpp  utils.cpp
